# xx2html

./: .gitignore  .pdm-python  CHANGELOG.md  README.md  bitbucket-pipelines.yml  pyproject.toml
.github/: FUNDING.yaml
.github/workflows/: ci.yml  publish.yml
src/xx2html/: __init__.py  _constants.py
src/xx2html/core/: __init__.py  cf.py  css.py  incell.py  links.py  types.py  utils.py  vm.py
src/xx2html/core/patches/: openpyxl.py
src/xx2html/cova/: __init__.py
tests/: test_cf.py  test_conditional_formatting_pipeline.py  test_cova_initialize.py  test_css.py  test_incell.py  test_integration_fixtures.py  test_links.py  test_openpyxl_patch.py  test_transform_failures.py  test_transform_options.py  test_utils.py  test_vm.py
tests/fixtures/: incell_image.xlsx  merged_cells_cf.xlsx
tests/scripts/: generate_fixtures.py
